# docker-sqs-consumer

./: Dockerfile  Makefile  README.md  build.sh  pyproject.toml
docker_sqs_consumer/: main.py
