[tool.poetry]
name = "docker-sqs-consumer"
version = "0.0.9"
description = ""
authors = ["Diego Alves <dalves@pagseguro.com>"]
license = "MIT"

[tool.poetry.scripts]
consume = 'docker_sqs_consumer.main:main'

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.57"

[tool.poetry.dev-dependencies]
black = {version = "^21.4b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


